--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "vue-nvd3-charts",
   "description": "Vuejs nvd3 charts",
-  "version": "0.0.1-rc.1",
+  "version": "0.0.1-rc.2",
   "author": "daofresh",
+  "repository": "github:daofresh/vue-nvd3-charts",
   "license": "MIT",
   "main": "src/charts/index.js",
   "scripts": {
